frontend/web/src/common/types/antlr4/IVLTSParser.js
// Generated from .\antlr4\IVLTS.g4 by ANTLR 4.10.1
// jshint ignore: start
import antlr4 from "antlr4";
import IVLTSListener from "./IVLTSListener.js";

const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map((ds, index) => new antlr4.dfa.DFA(ds, index));

const sharedContextCache = new antlr4.PredictionContextCache();

export default class IVLTSParser extends antlr4.Parser {
    static grammarFileName = "IVLTS.g4";
    static literalNames = [
        null,
        "';'",
        "'='",
        "'{'",
        "','",
        "'}'",
        "'('",
        "')'",
        "'=>'",
        "'.'",
        "'&'",
        "'|'",
        "':'",
        "'::'",
        "'as'",
        "'def'",
        "'let'",
        "'match'",
        "'struct'",
        "'enum'",
        "'_'",
        null,
        null,
        null,
        null,
        null,
        "'-'",
        "'+'",
        "'*'",
        "'/'",
    ];
    static symbolicNames = [
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        null,
        "As",
        "Def",
        "Let",
        "Match",
        "Struct",
        "Enum",
        "Discard",
        "IntInterval",
        "Interval",
        "Number",
        "String",
        "Identifier",
        "OpMinus",
        "OpPlus",
        "OpMult",
        "OpDiv",
        "Space",
        "LineComment",
        "BlockComment",
    ];
    static ruleNames = [
        "definitionDocument",
        "expressionDocument",
        "definition",
        "structDefinition",
        "functionDefinition",
        "variableDefinition",
        "enumDefinition",
        "enumVariant",
        "primaryExpression",
        "matchExpression",
        "matchArm",
        "functionCall",
        "named",
        "scopeExpression",
        "fieldAccessExpression",
        "negateExpression",
        "multiplicativeExpression",
        "additiveExpression",
        "intersectionExpression",
        "unionExpression",
        "expression",
        "args",
        "fields",
        "field",
        "parameters",
        "parameter",
        "name",
    ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(
            this,
            atn,
            decisionsToDFA,
            sharedContextCache
        );
        this.ruleNames = IVLTSParser.ruleNames;
        this.literalNames = IVLTSParser.literalNames;
        this.symbolicNames = IVLTSParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    definitionDocument() {
        let localctx = new DefinitionDocumentContext(this, this._ctx, this.state);
        this.enterRule(localctx, 0, IVLTSParser.RULE_definitionDocument);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 57;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (
                (_la & ~0x1f) == 0 &&
                ((1 << _la) &
                    ((1 << IVLTSParser.Def) |
                        (1 << IVLTSParser.Let) |
                        (1 << IVLTSParser.Struct) |
                        (1 << IVLTSParser.Enum))) !==
                    0
            ) {
                this.state = 54;
                this.definition();
                this.state = 59;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 60;
            this.match(IVLTSParser.EOF);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    expressionDocument() {
        let localctx = new ExpressionDocumentContext(this, this._ctx, this.state);
        this.enterRule(localctx, 2, IVLTSParser.RULE_expressionDocument);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 65;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (
                (_la & ~0x1f) == 0 &&
                ((1 << _la) &
                    ((1 << IVLTSParser.Def) |
                        (1 << IVLTSParser.Let) |
                        (1 << IVLTSParser.Struct) |
                        (1 << IVLTSParser.Enum))) !==
                    0
            ) {
                this.state = 62;
                this.definition();
                this.state = 67;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 68;
            this.expression();
            this.state = 69;
            this.match(IVLTSParser.EOF);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    definition() {
        let localctx = new DefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 4, IVLTSParser.RULE_definition);
        try {
            this.state = 75;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case IVLTSParser.Struct:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 71;
                    this.structDefinition();
                    break;
                case IVLTSParser.Def:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 72;
                    this.functionDefinition();
                    break;
                case IVLTSParser.Let:
                    this.enterOuterAlt(localctx, 3);
                    this.state = 73;
                    this.variableDefinition();
                    break;
                case IVLTSParser.Enum:
                    this.enterOuterAlt(localctx, 4);
                    this.state = 74;
                    this.enumDefinition();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    structDefinition() {
        let localctx = new StructDefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 6, IVLTSParser.RULE_structDefinition);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 77;
            this.match(IVLTSParser.Struct);
            this.state = 78;
            this.name();
            this.state = 81;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case IVLTSParser.T__0:
                    this.state = 79;
                    this.match(IVLTSParser.T__0);
                    break;
                case IVLTSParser.T__2:
                    this.state = 80;
                    this.fields();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    functionDefinition() {
        let localctx = new FunctionDefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 8, IVLTSParser.RULE_functionDefinition);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 83;
            this.match(IVLTSParser.Def);
            this.state = 84;
            this.name();
            this.state = 85;
            this.parameters();
            this.state = 91;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case IVLTSParser.T__1:
                    this.state = 86;
                    this.match(IVLTSParser.T__1);
                    this.state = 87;
                    this.expression();
                    this.state = 88;
                    this.match(IVLTSParser.T__0);
                    break;
                case IVLTSParser.T__2:
                    this.state = 90;
                    this.scopeExpression();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    variableDefinition() {
        let localctx = new VariableDefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 10, IVLTSParser.RULE_variableDefinition);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 93;
            this.match(IVLTSParser.Let);
            this.state = 94;
            this.name();
            this.state = 95;
            this.match(IVLTSParser.T__1);
            this.state = 96;
            this.expression();
            this.state = 97;
            this.match(IVLTSParser.T__0);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    enumDefinition() {
        let localctx = new EnumDefinitionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 12, IVLTSParser.RULE_enumDefinition);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 99;
            this.match(IVLTSParser.Enum);
            this.state = 100;
            this.name();
            this.state = 101;
            this.match(IVLTSParser.T__2);
            this.state = 115;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === IVLTSParser.Identifier) {
                this.state = 102;
                this.enumVariant();
                this.state = 107;
                this._errHandler.sync(this);
                var _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        this.state = 103;
                        this.match(IVLTSParser.T__3);
                        this.state = 104;
                        this.enumVariant();
                    }
                    this.state = 109;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 5, this._ctx);
                }

                this.state = 111;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === IVLTSParser.T__3) {
                    this.state = 110;
                    this.match(IVLTSParser.T__3);
                }

                this.state = 117;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 118;
            this.match(IVLTSParser.T__4);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    enumVariant() {
        let localctx = new EnumVariantContext(this, this._ctx, this.state);
        this.enterRule(localctx, 14, IVLTSParser.RULE_enumVariant);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 120;
            this.match(IVLTSParser.Identifier);
            this.state = 122;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === IVLTSParser.T__2) {
                this.state = 121;
                this.fields();
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    primaryExpression() {
        let localctx = new PrimaryExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 16, IVLTSParser.RULE_primaryExpression);
        try {
            this.state = 136;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 9, this._ctx);
            switch (la_) {
                case 1:
                    this.enterOuterAlt(localctx, 1);
                    this.state = 124;
                    this.match(IVLTSParser.IntInterval);
                    break;

                case 2:
                    this.enterOuterAlt(localctx, 2);
                    this.state = 125;
                    this.match(IVLTSParser.Interval);
                    break;

                case 3:
                    this.enterOuterAlt(localctx, 3);
                    this.state = 126;
                    this.match(IVLTSParser.Number);
                    break;

                case 4:
                    this.enterOuterAlt(localctx, 4);
                    this.state = 127;
                    this.match(IVLTSParser.String);
                    break;

                case 5:
                    this.enterOuterAlt(localctx, 5);
                    this.state = 128;
                    this.matchExpression();
                    break;

                case 6:
                    this.enterOuterAlt(localctx, 6);
                    this.state = 129;
                    this.functionCall();
                    break;

                case 7:
                    this.enterOuterAlt(localctx, 7);
                    this.state = 130;
                    this.named();
                    break;

                case 8:
                    this.enterOuterAlt(localctx, 8);
                    this.state = 131;
                    this.scopeExpression();
                    break;

                case 9:
                    this.enterOuterAlt(localctx, 9);
                    this.state = 132;
                    this.match(IVLTSParser.T__5);
                    this.state = 133;
                    this.expression();
                    this.state = 134;
                    this.match(IVLTSParser.T__6);
                    break;
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    matchExpression() {
        let localctx = new MatchExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 18, IVLTSParser.RULE_matchExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 138;
            this.match(IVLTSParser.Match);
            this.state = 139;
            this.expression();
            this.state = 140;
            this.match(IVLTSParser.T__2);
            this.state = 152;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (
                (_la & ~0x1f) == 0 &&
                ((1 << _la) &
                    ((1 << IVLTSParser.T__2) |
                        (1 << IVLTSParser.T__5) |
                        (1 << IVLTSParser.Match) |
                        (1 << IVLTSParser.Discard) |
                        (1 << IVLTSParser.IntInterval) |
                        (1 << IVLTSParser.Interval) |
                        (1 << IVLTSParser.Number) |
                        (1 << IVLTSParser.String) |
                        (1 << IVLTSParser.Identifier) |
                        (1 << IVLTSParser.OpMinus))) !==
                    0
            ) {
                this.state = 141;
                this.matchArm();
                this.state = 146;
                this._errHandler.sync(this);
                var _alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
                while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        this.state = 142;
                        this.match(IVLTSParser.T__3);
                        this.state = 143;
                        this.matchArm();
                    }
                    this.state = 148;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 10, this._ctx);
                }

                this.state = 150;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === IVLTSParser.T__3) {
                    this.state = 149;
                    this.match(IVLTSParser.T__3);
                }
            }

            this.state = 154;
            this.match(IVLTSParser.T__4);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    matchArm() {
        let localctx = new MatchArmContext(this, this._ctx, this.state);
        this.enterRule(localctx, 20, IVLTSParser.RULE_matchArm);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 158;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case IVLTSParser.Discard:
                    this.state = 156;
                    this.match(IVLTSParser.Discard);
                    break;
                case IVLTSParser.T__2:
                case IVLTSParser.T__5:
                case IVLTSParser.Match:
                case IVLTSParser.IntInterval:
                case IVLTSParser.Interval:
                case IVLTSParser.Number:
                case IVLTSParser.String:
                case IVLTSParser.Identifier:
                case IVLTSParser.OpMinus:
                    this.state = 157;
                    this.expression();
                    break;
                default:
                    throw new antlr4.error.NoViableAltException(this);
            }
            this.state = 162;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === IVLTSParser.As) {
                this.state = 160;
                this.match(IVLTSParser.As);
                this.state = 161;
                this.match(IVLTSParser.Identifier);
            }

            this.state = 164;
            this.match(IVLTSParser.T__7);
            this.state = 165;
            this.expression();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    functionCall() {
        let localctx = new FunctionCallContext(this, this._ctx, this.state);
        this.enterRule(localctx, 22, IVLTSParser.RULE_functionCall);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 167;
            this.name();
            this.state = 168;
            this.match(IVLTSParser.T__5);
            this.state = 169;
            this.args();
            this.state = 170;
            this.match(IVLTSParser.T__6);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    named() {
        let localctx = new NamedContext(this, this._ctx, this.state);
        this.enterRule(localctx, 24, IVLTSParser.RULE_named);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 172;
            this.name();
            this.state = 174;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input, 15, this._ctx);
            if (la_ === 1) {
                this.state = 173;
                this.fields();
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    scopeExpression() {
        let localctx = new ScopeExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 26, IVLTSParser.RULE_scopeExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 176;
            this.match(IVLTSParser.T__2);
            this.state = 180;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (
                (_la & ~0x1f) == 0 &&
                ((1 << _la) &
                    ((1 << IVLTSParser.Def) |
                        (1 << IVLTSParser.Let) |
                        (1 << IVLTSParser.Struct) |
                        (1 << IVLTSParser.Enum))) !==
                    0
            ) {
                this.state = 177;
                this.definition();
                this.state = 182;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 183;
            this.expression();
            this.state = 184;
            this.match(IVLTSParser.T__4);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    fieldAccessExpression() {
        let localctx = new FieldAccessExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 28, IVLTSParser.RULE_fieldAccessExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 186;
            this.primaryExpression();
            this.state = 191;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === IVLTSParser.T__8) {
                this.state = 187;
                this.match(IVLTSParser.T__8);
                this.state = 188;
                this.match(IVLTSParser.Identifier);
                this.state = 193;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    negateExpression() {
        let localctx = new NegateExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 30, IVLTSParser.RULE_negateExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 195;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === IVLTSParser.OpMinus) {
                this.state = 194;
                this.match(IVLTSParser.OpMinus);
            }

            this.state = 197;
            this.fieldAccessExpression();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    multiplicativeExpression() {
        let localctx = new MultiplicativeExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 32, IVLTSParser.RULE_multiplicativeExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 199;
            this.negateExpression();
            this.state = 204;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === IVLTSParser.OpMult || _la === IVLTSParser.OpDiv) {
                this.state = 200;
                _la = this._input.LA(1);
                if (!(_la === IVLTSParser.OpMult || _la === IVLTSParser.OpDiv)) {
                    this._errHandler.recoverInline(this);
                } else {
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 201;
                this.negateExpression();
                this.state = 206;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    additiveExpression() {
        let localctx = new AdditiveExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 34, IVLTSParser.RULE_additiveExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 207;
            this.multiplicativeExpression();
            this.state = 212;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === IVLTSParser.OpMinus || _la === IVLTSParser.OpPlus) {
                this.state = 208;
                _la = this._input.LA(1);
                if (!(_la === IVLTSParser.OpMinus || _la === IVLTSParser.OpPlus)) {
                    this._errHandler.recoverInline(this);
                } else {
                    this._errHandler.reportMatch(this);
                    this.consume();
                }
                this.state = 209;
                this.multiplicativeExpression();
                this.state = 214;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    intersectionExpression() {
        let localctx = new IntersectionExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 36, IVLTSParser.RULE_intersectionExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 215;
            this.additiveExpression();
            this.state = 220;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === IVLTSParser.T__9) {
                this.state = 216;
                this.match(IVLTSParser.T__9);
                this.state = 217;
                this.additiveExpression();
                this.state = 222;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    unionExpression() {
        let localctx = new UnionExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 38, IVLTSParser.RULE_unionExpression);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 223;
            this.intersectionExpression();
            this.state = 228;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while (_la === IVLTSParser.T__10) {
                this.state = 224;
                this.match(IVLTSParser.T__10);
                this.state = 225;
                this.intersectionExpression();
                this.state = 230;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    expression() {
        let localctx = new ExpressionContext(this, this._ctx, this.state);
        this.enterRule(localctx, 40, IVLTSParser.RULE_expression);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 231;
            this.unionExpression();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    args() {
        let localctx = new ArgsContext(this, this._ctx, this.state);
        this.enterRule(localctx, 42, IVLTSParser.RULE_args);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 244;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (
                (_la & ~0x1f) == 0 &&
                ((1 << _la) &
                    ((1 << IVLTSParser.T__2) |
                        (1 << IVLTSParser.T__5) |
                        (1 << IVLTSParser.Match) |
                        (1 << IVLTSParser.IntInterval) |
                        (1 << IVLTSParser.Interval) |
                        (1 << IVLTSParser.Number) |
                        (1 << IVLTSParser.String) |
                        (1 << IVLTSParser.Identifier) |
                        (1 << IVLTSParser.OpMinus))) !==
                    0
            ) {
                this.state = 233;
                this.expression();
                this.state = 238;
                this._errHandler.sync(this);
                var _alt = this._interp.adaptivePredict(this._input, 23, this._ctx);
                while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        this.state = 234;
                        this.match(IVLTSParser.T__3);
                        this.state = 235;
                        this.expression();
                    }
                    this.state = 240;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 23, this._ctx);
                }

                this.state = 242;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === IVLTSParser.T__3) {
                    this.state = 241;
                    this.match(IVLTSParser.T__3);
                }
            }
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    fields() {
        let localctx = new FieldsContext(this, this._ctx, this.state);
        this.enterRule(localctx, 44, IVLTSParser.RULE_fields);
        var _la = 0; // Token type
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 246;
            this.match(IVLTSParser.T__2);
            this.state = 258;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if (_la === IVLTSParser.Identifier) {
                this.state = 247;
                this.field();
                this.state = 252;
                this._errHandler.sync(this);
                var _alt = this._interp.adaptivePredict(this._input, 26, this._ctx);
                while (_alt != 2 && _alt != antlr4.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt === 1) {
                        this.state = 248;
                        this.match(IVLTSParser.T__3);
                        this.state = 249;
                        this.field();
                    }
                    this.state = 254;
                    this._errHandler.sync(this);
                    _alt = this._interp.adaptivePredict(this._input, 26, this._ctx);
                }

                this.state = 256;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === IVLTSParser.T__3) {
                    this.state = 255;
                    this.match(IVLTSParser.T__3);
                }
            }

            this.state = 260;
            this.match(IVLTSParser.T__4);
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }

    field() {
        let localctx = new FieldContext(this, this._ctx, this.state);
        this.enterRule(localctx, 46, IVLTSParser.RULE_field);
        try {
            this.enterOuterAlt(localctx, 1);
            this.state = 262;
            this.match(IVLTSParser.Identifier);
            this.state = 263;
            this.match(IVLTSParser.T__11);
            this.state = 264;
            this.expression();
        } catch (re) {
            if (re instanceof antlr4.error.RecognitionException) {
                localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            } else {
                throw re;
            }
        } finally {
            this.exitRule();
        }
        return localctx;
    }
